SONARGO-288 Add an abstraction layer for variable tracking